# Imecas-auto-reconnect

./: .gitignore  README.md  config.json.template  pyproject.toml  requirements.txt  run.bat  setting.json  说明(点我必看).txt
electron_base/:  splash.html  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
electron_base/src/: global.d.ts  main.ts  preload.ts  renderer.ts  types.ts
src/: setup.py
src/imecas_auto_reconnect/: configs.py  custom_form.py  gui.py  login_manager.py  main.py  mainwindow.py  mainwindow.ui  passwords_manager.py  requirements.txt  scheduler.py  setup.py
